<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_russian">

        <ImageView
            android:id="@+id/iv_movie_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_detail_main"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_picture_mask"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/bg_rect_gradient"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_picture"
            app:layout_constraintTop_toTopOf="@id/iv_movie_picture" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/tv_movie_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/movie_details_back"
            android:textAppearance="@style/TextAppearance.Regular.12"
            android:textColor="@color/white_alpha_50"
            app:drawableStartCompat="@drawable/ic_back"
            app:drawableTint="@color/white_alpha_50"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/iv_movie_picture" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/movie_details_avengers_end_game"
            android:textAppearance="@style/TextAppearance.Bold.40"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_picture"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_picture"
            tool:text="Avengers:\nEnd Game" />

        <TextView
            android:id="@+id/tv_movie_age_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/movie_details_13"
            android:textAppearance="@style/TextAppearance.Bold.12"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_movie_name"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <TextView
            android:id="@+id/tv_movie_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/movie_details_action_adventure_fantasy"
            android:textAppearance="@style/TextAppearance.Regular.14"
            android:textColor="@color/radical_red"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_name" />

        <RatingBar
            android:id="@+id/rb_movie_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.5"
            android:theme="@style/Widget.MyApplication.RatingBar"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_tag" />

        <TextView
            android:id="@+id/tv_movie_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/movie_details_125_reviews"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Bold.14"
            android:textColor="@color/comet"
            app:layout_constraintBottom_toBottomOf="@+id/rb_movie_rating"
            app:layout_constraintStart_toEndOf="@+id/rb_movie_rating"
            app:layout_constraintTop_toTopOf="@+id/rb_movie_rating" />

        <TextView
            android:id="@+id/tv_movie_storyline_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/movie_details_storyline"
            android:textAppearance="@style/TextAppearance.Bold.14"
            android:textColor="@color/whisper"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_review" />

        <TextView
            android:id="@+id/tv_movie_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:text="@string/movie_details_description"
            android:textAppearance="@style/TextAppearance.Regular.14"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_storyline_title" />

        <TextView
            android:id="@+id/tv_movie_cast_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:text="@string/movie_details_cast"
            android:textAppearance="@style/TextAppearance.Bold.14"
            android:textColor="@color/whisper"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_storyline" />

        <com.sokolkatya.myapplication.ui.view.SquareShapeableImageView
            android:id="@+id/iv_movie_cast_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/movie_details_cast_1"
            app:layout_constraintEnd_toStartOf="@+id/iv_movie_cast_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_cast_title" />

        <TextView
            android:id="@+id/tv_movie_cast_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:maxLines="2"
            android:text="@string/movie_details_robert_downey_jr"
            android:textAppearance="@style/TextAppearance.Bold.12"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_cast_1"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_cast_1"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_cast_1"
            app:layout_constraintVertical_bias="0" />

        <com.sokolkatya.myapplication.ui.view.SquareShapeableImageView
            android:id="@+id/iv_movie_cast_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/movie_details_cast_2"
            app:layout_constraintEnd_toStartOf="@+id/iv_movie_cast_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_cast_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_cast_title" />

        <TextView
            android:id="@+id/tv_movie_cast_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:maxLines="2"
            android:text="@string/movie_details_chris_evans"
            android:textAppearance="@style/TextAppearance.Bold.12"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_cast_2"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_cast_2"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_cast_2"
            app:layout_constraintVertical_bias="0" />

        <com.sokolkatya.myapplication.ui.view.SquareShapeableImageView
            android:id="@+id/iv_movie_cast_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/movie_details_cast_3"
            app:layout_constraintEnd_toStartOf="@+id/iv_movie_cast_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_cast_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_cast_title" />

        <TextView
            android:id="@+id/tv_movie_cast_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:maxLines="2"
            android:text="@string/movie_details_mark_ruffalo"
            android:textAppearance="@style/TextAppearance.Bold.12"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_cast_3"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_cast_3"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_cast_3"
            app:layout_constraintVertical_bias="0" />

        <com.sokolkatya.myapplication.ui.view.SquareShapeableImageView
            android:id="@+id/iv_movie_cast_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:src="@drawable/movie_details_cast_4"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_cast_3"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_cast_title" />

        <TextView
            android:id="@+id/tv_movie_cast_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="10dp"
            android:maxLines="2"
            android:text="@string/movie_details_chris_hemsworth"
            android:textAppearance="@style/TextAppearance.Bold.12"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/iv_movie_cast_4"
            app:layout_constraintStart_toStartOf="@+id/iv_movie_cast_4"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie_cast_4"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>