<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_movie_item"
    android:padding="@dimen/padding_2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="6dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="6dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_movie_item_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:shapeAppearanceOverlay="@style/Widget.MyApplication.ImageWithTopRoundedCorners6"
        tool:src="@drawable/movie_item_1" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_movie_item_picture_mask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/bg_rect_gradient"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_item_picture"
        app:layout_constraintTop_toTopOf="@+id/iv_movie_item_picture"
        app:shapeAppearanceOverlay="@style/Widget.MyApplication.ImageWithTopRoundedCorners6" />

    <ImageView
        android:id="@+id/iv_movie_item_favorite"
        android:layout_width="@dimen/size_16"
        android:layout_height="@dimen/size_14"
        android:layout_marginTop="@dimen/margin_12"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_favorite_button" />

    <TextView
        android:id="@+id/tv_movie_item_age_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:background="@drawable/bg_rect_alpha_90"
        android:gravity="center"
        android:padding="@dimen/padding_4"
        android:textAppearance="@style/TextAppearance.Bold.12"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="@string/movie_list_13" />

    <TextView
        android:id="@+id/tv_movie_item_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_4"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.Regular.8"
        android:textColor="@color/radical_red"
        app:layout_constraintBottom_toTopOf="@+id/rb_movie_item_rating"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        tool:text="@string/movie_list_action_adventure_fantasy" />

    <RatingBar
        android:id="@+id/rb_movie_item_rating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/Widget.MyApplication.RatingBar"
        app:layout_constraintBottom_toBottomOf="@+id/tv_movie_item_review"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/tv_movie_item_review"
        tool:rating="4.5" />

    <TextView
        android:id="@+id/tv_movie_item_review"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_12"
        android:layout_marginStart="@dimen/margin_6"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="start|center_vertical"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Bold.8"
        android:textColor="@color/comet"
        app:layout_constraintBottom_toBottomOf="@+id/iv_movie_item_picture"
        app:layout_constraintStart_toEndOf="@+id/rb_movie_item_rating"
        tool:text="@string/movie_list_125_reviews" />

    <TextView
        android:id="@+id/tv_movie_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.Bold.14"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_item_duration"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_item_picture"
        tool:text="@string/movie_list_avengers_end_game" />

    <TextView
        android:id="@+id/tv_movie_item_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="start"
        android:textAppearance="@style/TextAppearance.Bold.8"
        android:textColor="@color/smoky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_item_name"
        tool:text="@string/movie_list_137_min" />

</androidx.constraintlayout.widget.ConstraintLayout>